# rust-for-amigaos4

./: .gitignore  CLAUDE.md  README.md  build.bat  build.sh  cargo-amiga.bat  cargo-amiga.sh  setup.bat  setup.sh
.github/workflows/: ci.yml  docs.yml
Tests/: Cargo.toml  README.md
Tests/src/: lib.rs  main.rs
Tests/tests/: combined_amigaos4.rs  rust_doc_claims.rs  rust_regression.rs  rust_sdk_audit.rs  rust_signature_audit.rs  target_smoke.rs
amigaos4/: CHANGELOG.md  Cargo.toml
amigaos4-alloc/: CHANGELOG.md  Cargo.toml
amigaos4-alloc/src/: clib4_alloc.rs  exec_alloc.rs  lib.rs
amigaos4-sys/: CHANGELOG.md  Cargo.toml
amigaos4-sys/docs/: crate_guide.md
amigaos4-sys/glue/: amiga_glue.c
amigaos4-sys/src/: glue.rs  lib.rs  ppc_asm.rs  types.rs
amigaos4-sys/src/interfaces/: acpi.rs  ahi.rs  ahisub.rs  amigaguide.rs  amigainput.rs  amissl.rs  amisslmaster.rs  application.rs  arexx.rs  asl.rs  battclock.rs  battmem.rs  bevel.rs  bitmap_gc.rs  blankermodule.rs  bootsd.rs  btree.rs  bullet.rs  button.rs  bzip2.rs  camd.rs  camd_driver.rs  card.rs  catweasel.rs  charset.rs  checkbox.rs  chooser.rs  cia.rs  clicktab.rs  colorwheel.rs  commodities.rs  console.rs  cw3_floppy.rs  cw3_gameport.rs  cw3_keyboard.rs  cw3_sid.rs  cybergfx.rs  cyrus.rs  datatypes.rs  datebrowser.rs  (+90 more)
amigaos4-sys/src/wrappers/: acpi.rs  amigaguide.rs  amigainput.rs  amissl.rs  amisslmaster.rs  application.rs  asl.rs  battmem.rs  bevel.rs  blankermodule.rs  btree.rs  camd.rs  camd_driver.rs  card.rs  catweasel.rs  commodities.rs  console.rs  cw3_floppy.rs  cw3_gameport.rs  cw3_keyboard.rs  cw3_sid.rs  cyrus.rs  datatypes.rs  debug.rs  diskfont.rs  dos.rs  drawlist.rs  elf.rs  exec.rs  expat.rs  filesysbox.rs  gadtools.rs  graphics.rs  hunk.rs  icon.rs  iffparse.rs  intuition.rs  keymap.rs  layers.rs  locale.rs  (+18 more)
amigaos4/src/: application.rs  asl.rs  async_rt.rs  boopsi.rs  clipboard.rs  cstr.rs  datatypes.rs  dns.rs  dos.rs  env.rs  error.rs  fmt.rs  fs.rs  gfx.rs  http.rs  https.rs  iface.rs  io.rs  lib.rs  locale.rs  mem.rs  menu.rs  net.rs  panic.rs  parse.rs  port.rs  reaction.rs  requester.rs  screen.rs  tag.rs  thread.rs  time.rs  timer.rs  window.rs
amigaos4/tests/: host_tests.rs
clib4-nightly/: clib4.library  clib4.library.debug
clib4-nightly/include/: fcntl.h  fenv.h  pthread.h  stdio.h  unistd.h
clib4-nightly/include/netinet/: in.h
clib4-nightly/include/sys/: mman.h  shm.h
docs/: nostd-ecosystem.md  phase1-progress.md  phase10-progress.md  phase2-progress.md  phase3-progress.md  phase4-progress.md  phase5-progress.md  phase6-progress.md  phase7-progress.md  phase8-progress.md  phase9-progress.md  roadmap.md
examples/aminet-browser/: Cargo.toml  Makefile  aminet-browser  powerpc-amigaos.json
examples/aminet-browser/src/: main.rs
examples/async-demo/: Cargo.toml  Makefile  async-demo
examples/async-demo/src/: main.rs
examples/async-net-echo/: Cargo.toml  Makefile  async-net-echo
examples/async-net-echo/src/: main.rs
examples/audio-tone/: Cargo.toml  Makefile  audio-tone
examples/audio-tone/src/: main.rs
examples/file-io-demo/: Cargo.toml  Makefile  file-io-demo
examples/file-io-demo/src/: main.rs
examples/gameboy-test/: Cargo.toml  Makefile  gameboy-test
examples/gameboy-test/.cargo/: config.toml
examples/gameboy-test/src/: main.rs
examples/gui-demo/: Cargo.toml  Makefile  fake-linker.bat  fake-linker.sh  gui-demo
examples/gui-demo/src/: main.rs
examples/hello/: Cargo.toml  Makefile  hello  powerpc-amigaos.json
examples/hello-driver/: Cargo.toml  Makefile  hello-driver
examples/hello-driver/src/: driver_glue.c  main.rs
examples/hello-library/: Cargo.toml  Makefile  fake-linker.bat  fake-linker.sh
examples/hello-library/src/: library_glue.c  main.rs
examples/hello/.cargo/: config.toml
examples/hello/src/: main.rs
examples/http-client/: Cargo.toml  Makefile  http-client  https-client
examples/http-client/src/: main.rs
examples/https-client/: Cargo.toml  Makefile  https-client
examples/https-client/src/: main.rs
examples/iff-dump/: Cargo.toml  Makefile  iff-dump
examples/iff-dump/src/: main.rs
examples/json-config/: Cargo.toml  Makefile  json-config
examples/json-config/src/: main.rs
examples/net-demo/: Cargo.toml  Makefile  net-demo
examples/net-demo/src/: main.rs
examples/picture-viewer/: Cargo.toml  Makefile  picture-viewer
examples/picture-viewer/src/: main.rs
examples/ram-device/: Cargo.toml  Makefile  fake-linker.bat  fake-linker.sh  ram.device
examples/ram-device/src/: device_glue.c  main.rs
examples/sqlite3-demo/: Cargo.toml  Makefile  sqlite3-demo
examples/sqlite3-demo/src/: main.rs
examples/test-harness/: Cargo.toml  Makefile  test-harness
examples/test-harness-gui/: Cargo.toml  Makefile  test-harness-gui
examples/test-harness-gui/src/: main.rs
examples/test-harness-net/: Cargo.toml  Makefile  fake-linker.sh
examples/test-harness-net/src/: main.rs
examples/test-harness/src/: main.rs
examples/thread-amissl-probe/: Cargo.toml  Makefile
examples/thread-amissl-probe/src/: amissl_glue.c  main.rs
examples/thread-demo/: Cargo.toml  Makefile  thread-demo
examples/thread-demo/src/: main.rs
examples/timer-demo/: Cargo.toml  Makefile  timer-demo
examples/timer-demo/src/: main.rs
examples/xadmaster-list/: Cargo.toml  Makefile  xadmaster-list
examples/xadmaster-list/src/: main.rs
examples/zlib-roundtrip/: Cargo.toml  Makefile  zlib-roundtrip
examples/zlib-roundtrip/src/: main.rs  z_glue.c
target-spec/: powerpc-amigaos.json
templates/app/: Cargo.toml  Makefile  fake-linker.sh
templates/app/src/: main.rs
templates/driver/: Cargo.toml  Makefile  fake-linker.bat
templates/driver/src/: driver_glue.c  main.rs
