[package]
name = "amigaos4"
version = "0.6.0"
edition = "2021"
description = "Safe Rust wrappers and std-like modules for AmigaOS 4.1"

[features]
default = ["app"]
app = ["fs", "thread", "time", "env", "net"]
driver = []
fs = []
thread = []
time = []
env = []
net = []
# HTTPS over the clib4-built OpenSSL. Opt-in (not part of `app`)
# because it adds -lssl -lcrypto to the final link.
tls = ["net"]

[dependencies]
amigaos4-sys = { path = "../amigaos4-sys", features = ["locale", "graphics", "timer", "iffparse", "asl", "listbrowser", "application"] }
