[package]
name = "hello-driver"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "hello_driver"
crate-type = ["staticlib"]
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
amigaos4-sys = { path = "../../amigaos4-sys", default-features = false, features = ["exec", "dos"] }
amigaos4 = { path = "../../amigaos4", default-features = false, features = ["driver"] }
amigaos4-alloc = { path = "../../amigaos4-alloc", default-features = false, features = ["exec"] }
